# sls-mis

./: .gitignore  README.md
demos/: README.md
demos/alibaba-dubbo-demo/: .gitignore  README.md  pom.xml
demos/apache-dubbo-demo/: .gitignore  README.md  pom.xml
demos/jaeger-sls-demo/: README.md  go.mod  main.go
demos/opentelemetry/: Makefile  docker-compose.yml  services.toml
demos/opentelemetry-grpc-demo/: pom.xml
demos/opentelemetry-http-demo/: README.md  pom.xml
demos/opentelemetry/opentelemetry-python/: Dockerfile  Makefile  README.md  pyproject.toml  startup.sh
demos/opentelemetry/opentelemetry-python/src/server/: otslsprovider.py  server.py
demos/ot-metric-demo/: pom.xml
demos/sls-mall/: Makefile
demos/springboot-zipkin/: .gitignore  Dockerfile  Makefile  README.md  pom.xml  startup.sh
demos/trace-with-log-demo/: README.md  pom.xml
demos/zipkin/: .env  docker-compose.yml
docs/: How-to-write-service-call-pipeline.md
fault-inject/: Readme.md
fault-inject/fault-inject-script/: Readme.md
k8s-scripts/: README.md
k8s-scripts/context-propagate/: ot-zipkin-context-propagate.yaml  services-config.yaml  zipkin-ot-context-propagate-service.toml
k8s-scripts/opentelemetry-demos/: Makefile  README.md  opentelemetry-configmap.yaml  opentelemetry-dotnet.yaml  opentelemetry-go.yaml  opentelemetry-java.yaml  opentelemetry-node.yaml  opentelemetry-php.yaml  opentelemetry-python.yaml
opentelemetry-demos/: README.md
opentelemetry-demos/opentelemetry-dotnet/: Dockerfile  Makefile  README.md  sources.list
opentelemetry-demos/opentelemetry-go/: Makefile  README.md
opentelemetry-demos/opentelemetry-java/: .gitignore  Dockerfile  (+4 more)
opentelemetry-demos/opentelemetry-python/: Dockerfile  Makefile  README.md  pyproject.toml  server.py  startup.sh
opentelemetry-demos/opentelemetry-python/src/server/: server.py
otle-collectors/: Dockerfile  Makefile  config-jaeger.yaml  config-opencensus.yaml  config-opentelemetry.yaml  config-zipkin.yaml  entrypoint.sh
sls-mall/: README.md
(+490 files in other folders)
