[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["qiansheng91 <qiansheng.zx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opentelemetry-instrumentation-requests = "0.20b0"
opentelemetry-instrumentation-flask = "0.20b0"
opentelemetry-exporter-otlp = "1.1.0"
opentelemetry-sdk = "1.1.0"
opentelemetry-api = "1.1.0"
flask="^1.1.2"
requests="^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start = "server.server:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
